--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <main>
         <section class="presentation">
             <h1 class="titulo__presentation">Esto es CinPox</h1>
-            <p class="paragraph">esta mierda sera comprada por microsof y tambien sera la mayor parte de videojuegos y sobr eso nadaa sera como antes las aginas web se revolucuonaran aparte de esta basra llamada cinpox estara n el mercado y me hara mas rico que su puta madre sere la personas mas rica de todo el puto mundo y tambien una buena persona nio dejara que la pbrez aatraque a esrelLorem ipsum dolor, sit amet consectetur adipiGAGAgoagoagdoaguyregbdgdugedgdefrin dsanba psera in sad  psaki 3d de frain e mierda pedazod e mitudjaqiGAGOJASUGYGAJOGAGAsicing elit. Quis quidem voluptate labore necessitatibus dolore quod? Tempore quos eius a cumque expedita, similiTAMBIEN SE DECIRCA A DIFERENTES ESTILOS DE VIDEO JUEGO COMO EL DE RECHINGAS A TODA TU REPUTISIMA MADRE PEDAZO DE ANIMAL y tambien lorem
-            que mollitia ab tempora ut quis nulla distinctio eveniet!</p>
+            <p class="paragraph">el jonamierda es un pendejo y un sucio y el luis es un fukboing</p>
             <a href="#" class="presentation__link">Contactame aqui</a>
         </section>
         <section class="cuerpo">
